--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+          >
+          Udemy Course. Made by Stepan Nimchuk through learning for portfolio.
         </p>
       </div>
 
